@@ -103,19 +103,6 @@ clean:
 # check out Debian bug #471263 at
 # http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=471263 .
 # It would otherwise also create problems for Debian Source 3.0 (quilt).
-	rm -f utils/hbf2gf/config.log
-	rm -f utils/hbf2gf/config.status
-	rm -f utils/hbf2gf/hbf.o
-	rm -f utils/hbf2gf/hbf2gf
-	rm -f utils/hbf2gf/hbf2gf.c
-	rm -f utils/hbf2gf/hbf2gf.o
-	rm -f utils/hbf2gf/Makefile
-	rm -f utils/Bg5conv/bg5conv
-	rm -f utils/CEFconv/cefconv
-	rm -f utils/CEFconv/cef5conv
-	rm -f utils/CEFconv/cefsconv
-	rm -f utils/SJISconv/sjisconv
-	rm -f utils/extconv/extconv
 
 	# Clean up config.{guess,sub}
 #	dh_autotools-dev_restoreconfig
